# acp_a2a_MIGRATION

./: .env  A2A_COMPLETE_IMPLEMENTATION.md  ACP_TO_A2A_MIGRATION_GUIDE.md  CHANGES_MADE.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  acp-a2a-migration-guide.mdx  agentic_client_a2a.py  beeai_platform_integration.py  blog_20251019_170128_acp_automated_commerce.md  blog_20251019_172107_app_streamlining_agent_payments.md  blog_20251019_180510_migrate_acp_to_a2a.md  blog_20251019_180603_ibm_to_google_agent_protocol_migration.md  blog_20251019_183352_unlock_n8n_automate_workflows.md  blogpost_server_a2a.py  deepserach_server_a2a.py  enhanced_agent_card_example.py  enhanced_agents_a2a.py  enhanced_blogpost_agent.py  enhanced_deepsearch_agent.py  main.py  medium_article_acp_to_a2a_migration.md  platform_launcher.py  pyproject.toml  requirements.txt  simple_a2a_demo.py  simple_platform_demo.py
